# MRSSA

./: .dockerignore  .envrc.template  .gitignore  Makefile  README.md  main.py  pyproject.toml  url.txt
infra/: gateway.tf  lambda.tf  variables.tf
infra/app/: .terraform.lock.hcl  gateway.tf  lambda.tf  main.tf  outputs.tf  repository.tf  variables.tf
prod/: main.tf
src/: environment.py  main.py  model.py
src/brightcove/: __init__.py  content.py
src/partners/: __init__.py  base.py  flipboard.py  imds.py  middleblock.py  newsbreak.py  simplefeed_msn.py  smart_news.py  wurl.py  yahoo_articles.py
src/utils/: __init__.py  content.py
src/wp/: __init__.py  content.py  videos.py
templates/: base-content.j2  base-player.j2  flipboard.j2  imds.j2  middleblock.j2  newsbreak.j2  simplefeed-msn.j2  smart-news.j2  wurl.j2
test/: msn-f.xml  msn.xml  yahoo.xml
